# rust-parser

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  traits.rs
src/ber_tlv/: mod.rs  tag_length.rs  tlv_parser_error.rs
src/ber_tlv_parser/: ber_tlv_parser.rs  mod.rs
src/kdump/: mod.rs
tests/: tests.rs
tests/assets/ber_tlv/: data1.ber
tests/ber_tlv/: mod.rs
tests/kdump/: mod.rs
