[package]
name = "rust-parser"
version = "0.1.0"
edition = "2021"
authors = ["Muksh Kumar Chaurasiya <mchauras.linux@gmail.com>"]
description = "Parser for various data types written in rust written Rust"
readme = "README.md"
repository = "https://github.com/mchauras-linux/rust-parser"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
