[package]
name = "rust-parser"
version = "0.1.2"
edition = "2021"
authors = ["Muksh Kumar Chaurasiya <mchauras.linux@gmail.com>"]
description = "Parser for various data types written in rust written Rust"
readme = "README.md"
repository = "https://github.com/mchauras-linux/rust-parser"
documentation = "https://docs.rs/rust-parser"
license = "MIT OR Apache-2.0"
exclude = ["/tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
